[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">= 3.0"
name = "hypickle"
version = "1.0.8"
dependencies = [
  "requests",
  "rich",
  "deepdiff",
  "mplcursors",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
hypickle = "main:main"

[tool.setuptools]
py-modules = []