[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.0"
name = "hypickle"
version = "1.1.32"
authors = [
  { name="John Doknjas", email="jdoknjas@sfu.ca" },
]
description = "A script that outputs realtime stats for custom lists of friends you create."
keywords = ["hypickle", "hypixel", "pit", "bedwars", "friends", "stats", "api"]
dependencies = [
  "requests",
  "rich",
  "deepdiff",
  "mplcursors",
]
readme = "README.md"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Operating System :: OS Independent",
]

[project.scripts]
hypickle = "python -m hypickle.main"

[project.urls]
Homepage = "https://github.com/johndoknjas/hypixel-online-friends"

[tool.setuptools]
packages = ["hypickle"]